--- a/Now/Base.lproj/Main.storyboard
+++ b/Now/Base.lproj/Main.storyboard
@@ -61,40 +61,6 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="PRd-19-eT7">
-            <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="5YB-mi-InO" customClass="ViewController" customModule="Now" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="UxJ-FJ-nX6"/>
-                        <viewControllerLayoutGuide type="bottom" id="YQs-bg-LKu"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6sf-S1-ggV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What are you doing?" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uw1-Tk-lWM">
-                                <rect key="frame" x="30" y="294" width="154" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xeq-4g-2af">
-                                <rect key="frame" x="216" y="386" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="m7S-aV-Yxg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="924" y="139"/>
-        </scene>
         <!--Settings-->
         <scene sceneID="RCT-xd-Tpa">
             <objects>
@@ -177,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5P6-oR-ofi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="924" y="904"/>
+            <point key="canvasLocation" x="-654" y="931"/>
         </scene>
         <!--Camera-->
         <scene sceneID="GkJ-ym-PiW">
@@ -221,10 +187,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kd5-rg-W1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1717.5999999999999" y="148.87556221889056"/>
+            <point key="canvasLocation" x="879" y="931"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="5Su-An-KG5"/>
+        <segue reference="zfK-Bl-Ffd"/>
     </inferredMetricsTieBreakers>
 </document>
